# qmlkit-sample

./: .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: CMakeLists.template.txt
cpp/: main.cpp
cpp/file/: fileobject.cpp  fileobject.h
qml/: login.qml  main.qml  qml.qrc  qtquickcontrols2.conf
qml/dao/: Dao.qml  UserDao.qml
qml/kit/components/: KitArea.qml  KitButton.qml  KitButton0.qml  KitCollapse.qml  KitConfirm.qml  KitDateTimePicker.qml  KitDrawer.qml  KitForm.qml  KitHCPlayer.qml  KitIcon.qml  KitInput.qml  KitLine.qml  KitLoading.qml  KitMessage.qml  KitModal.qml  KitPage.qml  KitPagination.qml  KitProgress.qml  KitProgressCircle.qml  KitSearchInput.qml  KitSvg.qml  KitSwitch.qml  KitTable.qml  KitTable0.qml  KitTableCell.qml  KitWebView.qml  KitWindow.qml
qml/kit/components-undo/: KitSwitch.qml
qml/kit/components/dummydata/: $color.qml  $theme.qml
qml/kit/components/table/: KitTableCell.qml  KitTableCellWrapper.qml  KitTableColumnProperty.qml  KitTableRepeatBody.qml  KitTableRepeatHeader.qml
qml/kit/config/: KitColor.qml  KitConfig.qml  KitSettings.qml  KitTheme.qml
qml/kit/service/: KitDao.qml  KitStore.qml  KitUtils.qml  KitWinMng.qml
qml/layouts/: LayoutMenu.qml  LayoutTabWindow.qml  Login.qml
qml/pages/: Page1.qml  Page2.qml  Page3.qml  Page4.qml  PageDocument.qml  PageStack.qml  PageSwiper.qml  WindowDemo.qml  login.qml
qml/pages/demo/: ComButton.qml  ComCheck.qml  ComComboBox.qml  ComProgressBar.qml  ComSlider.qml  ComSvg.qml  ComSwitch.qml  ComTable.qml  ComText.qml  index.qml  topu.qml
qml/pages/demo2/: index.qml
qml/pages/popMenu/: MenuDelegate.qml  PopMenuWindow.qml
